--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/Screenshot 2022-09-23 105344.png" class="image fit thumb"><img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
+								<h3>Project 1: World Covid Analysis</h3>
+								<p>With the raw data from 'Our World in Data', I processed the analysis using SQL and created viz on Tableau Public </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
