--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Screenshot 2022-09-23 105344.png" class="image fit thumb"><img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
 								<h3>Project 1: World Covid Analysis</h3>
-								<p>With the raw data from 'Our World in Data', I processed the analysis using SQL and created viz on Tableau Public </p>
+								<p>With the raw data from 'Our World in Data', I processed the analysis using SQL 
+									and created a Dashboard on Tableau Public to illustrate the findings </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
