--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Trang Dao portfolio page</title>
@@ -46,7 +42,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/Screenshot 2022-09-23 105344.png" class="image fit thumb"><img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
+								<a href="Project 1.html"><img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
 								<h3>Project 1: World Covid Analysis</h3>
 								<p>With the raw data from 'Our World in Data', I processed the analysis using SQL 
 									and created a Dashboard on Tableau Public to illustrate the findings </p>
