--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="Project 1.html"><img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
+								<a href="Project 1.html" class="image fit thumb"><img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
 								<h3>Project 1: World Covid Analysis</h3>
 								<p>With the raw data from 'Our World in Data', I processed the analysis using SQL 
 									and created a Dashboard on Tableau Public to illustrate the findings </p>
