--- a/Project 1.html
+++ b/Project 1.html
@@ -26,7 +26,7 @@
 					<section id="one">
 						<h2>Project 1: World Covid Data Analysis</h2>
 						<div>
-								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" alt="" /></a>
+								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" class="background" alt="" /></a> </br>
 								<h4>Code: </h4></br>
 								<h4>Dashboard: </h4></br>
 								<h4>Skills: data cleaning, data analysis, data visualisation</h4></br>
