--- a/Project 1.html
+++ b/Project 1.html
@@ -26,9 +26,9 @@
 					<section id="one">
 						<h2>Project 1: World Covid Data Analysis</h2>
 						<div>
-								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" class="background" alt="" /></a> </br>
-								<h4>Code: </h4></br>
-								<h4>Dashboard: </h4></br>
+								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" class="background" alt="" /> </br>
+								<h4>Code: <a href="https://github.com/trangpkamk/Portfolioprojects"> Project_1_Covid_data.sql </a></h4></br>
+								<h4>Dashboard: <a href="https://public.tableau.com/shared/8NF8FQN9D?:display_count=n&:origin=viz_share_link"> Tableau Public </a></h4></br>
 								<h4>Skills: data cleaning, data analysis, data visualisation</h4></br>
 								<p><b>Description:</b> The dataset contains 217,741 records as of 2022 recording world cases of Covid from 1/1/2020 to 19/9/2022. It was a large dataset with many categories. I cleaned it, then splitted the original dataset into two different tables. In Microsoft SQL Server Management Studio (SSMS), I extracted data and explored different aspects of them </br> 
 
@@ -36,7 +36,7 @@
 							
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Other projects</a></li>
+							<li><a href="index.html" class="button">Go back</a></li>
 						</ul>
 					</section>
 
