--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 									and created a Dashboard on Tableau Public to illustrate the findings </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="Project 2.html" class="image fit thumb"><img src="images/thumbs/sql thumb.avif" alt="" /></a>
+								<h3>Project 2: Data Cleaning Project with SQL</h3>
+								<p>With the Sample data "Nasville Housing", data cleaning was performed with SQL, Tasks include:
+								Deleting duplicates, Filling in blank, Splitting to columns, etc.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
