--- a/Project 1.html
+++ b/Project 1.html
@@ -26,12 +26,12 @@
 					<section id="one">
 						<h2>Project 1: World Covid Data Analysis</h2>
 						<div>
-								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" class=".image.fit" alt="" /> </br></br>
-	
-								<p><b>Code:</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> Project_1_Covid_data.sql </a></p>
-								<p><b>Dashboard:</b> <a href="https://public.tableau.com/shared/8NF8FQN9D?:display_count=n&:origin=viz_share_link"> Tableau Public </a></p>
-								<p><b>Skills:</b> data cleaning, data analysis, data visualisation</p>
-								<p><b>Description:</b> The dataset contains 217,741 records as of 2022 recording world cases of Covid from 1/1/2020 to 19/9/2022. It was a large dataset with many categories. I cleaned it, then splitted the original dataset into two different tables. In Microsoft SQL Server Management Studio (SSMS), I extracted data and explored different aspects of them </br> 
+								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" width="797" height="328" alt="" /> </br></br>
+								<p>
+								<b>Code:</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> Project_1_Covid_data.sql </a></br>
+								<b>Dashboard:</b> <a href="https://public.tableau.com/shared/8NF8FQN9D?:display_count=n&:origin=viz_share_link"> Tableau Public </a></br>
+								<b>Skills:</b> data cleaning, data analysis, data visualisation</br>
+								<b>Description:</b> The dataset contains 217,741 records as of 2022 recording world cases of Covid from 1/1/2020 to 19/9/2022. It was a large dataset with many categories. I cleaned it, then splitted the original dataset into two different tables. In Microsoft SQL Server Management Studio (SSMS), I extracted data and explored different aspects of them </br> 
 
 								Tableau Dashboard was created using Tableau Public to visualise the findings </p>
 							
