--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									and created a Dashboard on Tableau Public to illustrate the findings </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="Project 2.html" class="image fit thumb"><img src="images/thumbs/sql thumb.avif" alt="" /></a>
+								<a href="Project 2.html" class="image fit thumb"><img src="images/thumbs/sql thumb.jpg" alt="" /></a>
 								<h3>Project 2: Data Cleaning Project with SQL</h3>
 								<p>With the Sample data "Nasville Housing", data cleaning was performed with SQL, Tasks include:
 								Deleting duplicates, Filling in blank, Splitting to columns, etc.</p>
