--- a/Project 1.html
+++ b/Project 1.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Trang</strong><br />
 					London-based data analyst<br />
 					Welcome to my page</h1>
@@ -29,7 +29,7 @@
 								<img src="images/thumbs/Screenshot 2022-09-23 105344.png" width="797" height="328" alt="" /> </br></br>
 								<p>
 								<b>Code:</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> Project_1_Covid_data.sql </a></br>
-								<b>Dashboard:</b> <a href="https://public.tableau.com/shared/8NF8FQN9D?:display_count=n&:origin=viz_share_link"> Tableau Public </a></br>
+								<b>Dashboard:</b> <a href="https://public.tableau.com/app/profile/tcambe/viz/Covid_Project_Portfolio/Dashboard1"> Tableau Public </a></br>
 								<b>Skills:</b> data cleaning, data analysis, data visualisation</br>
 								<b>Description:</b> The dataset contains 217,741 records as of 2022 recording world cases of Covid from 1/1/2020 to 19/9/2022. It was a large dataset with many categories. I cleaned it, then splitted the original dataset into two different tables. In Microsoft SQL Server Management Studio (SSMS), I extracted data and explored different aspects of them </br> 
 
@@ -37,7 +37,7 @@
 							
 						</div>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Go back</a></li>
+							<li><a href="Full list of my projects.html" class="button">Other Projects</a></li>
 						</ul>
 					</section>
 
