--- a/Full list of my projects.html
+++ b/Full list of my projects.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Trang</strong><br />
 					London-based data analyst<br />
 					Welcome to my page</h1>
@@ -46,6 +46,9 @@
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 						</div>
+							<ul class="actions">
+							<li><a href="index.html" class="button">Back Home</a></li>
+						</ul>
 					</section>
 
 				<!-- Last -->
