--- a/Project 2.html
+++ b/Project 2.html
@@ -24,7 +24,7 @@
 
 				<!-- One-->
 
-				<h2>Project 1: World Covid Data Analysis</h2>
+				<h2>Project 2: Data Cleaning Project with SQL</h2>
 						<div>
 								<img src="images/thumbs/sql thumb.jpg" width="797" height="328" alt="" /> </br></br>
 								<p>
