--- a/Project 2.html
+++ b/Project 2.html
@@ -28,7 +28,7 @@
 						<div>
 								<img src="images/thumbs/sql thumb.jpg" width="797" height="328" alt="" /> </br></br>
 								<p>
-								<b>Code:</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> Project_1_Covid_data.sql </a></br>
+								<b>Code:</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> SQL Cleaning project.sql </a></br>
 								<b>Skills:</b> data cleaning</br>
 								<b>Description:</b> The dataset 'Nashville Housing data' consisting of 56,478 rows come with errors and inconsistencies, for example, duplicating entries, blank spaces, incoherent addresses, inconsistent data type formats. I processed the data from dirty to clean using different SQL functions </p>
 							
