--- a/index.html
+++ b/index.html
@@ -27,15 +27,27 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>I am a former Data Analyst working in FMCG industry. </br>
-						Good working knowledge of Python, R, HTML, CSS</br>
-						This website is to showcase some of my recent works
+						<p>Young professional who hold two bachelors in Business Administration and Social Services </br>
+						I have a diverse background with more than 10 years of living, studying and working in Finland, France and United Kingdom</br>
+						Curious and quick-witted, I seek to broadening my knowledge and thrive within the field of Data Analysis</br>
+						This website is to showcase some of my recent works</br>
+						</br>
+						<ul>
+						<b>Highlighted skills:</b><br> 
+							<li> Excel advanced level, ease at using index-matching/lookup, pivot and automating processing data with PowerQuery/Excel VBA</li><br> 
+							<li> SMSS/BigQuery SQL to clean, explore, retrieve data to analyse and prepare them for visualisation </li><br>
+							<li> Visualisation tools notably Tableau and Power BI to connect data, create meaningful data stories, interactive dashboard </li><br>
+							<li> Other CRM tools and platforms such as Salesforce, Hubspot, Hootsuite, Mailjet, etc. I'm a very fast learner of new technologies</li><br>
+							<li> Good knowledge foundation of R and Python. I can use R to install data packages, load libraries, import/export data, clean, analyse,<br> 
+								visualise by exercising common features of R libraries: dplyr, readr, tidyverse, ggplot2, etc.</li><br>
+							<li> Customer Services skills, report and presentation </li><br>
+						</ul>		
 						 </p>
 					</section>
 				<!-- Two -->
 					<section id="two">
 						<h2>My Resume</h2>
-						 <a href="#" class="CV"><img src="images/CV_Trang_09_22.jpeg" alt="" /></a>
+						 <a href="#" class="CV"><img src="images/CV_Trang.001.jpeg" alt="" /></a>
 					</section>
 				<!-- Three -->
 					<section id="three">
