--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 							<li> Good knowledge foundation of R and Python. I can use R to install data packages, load libraries, import/export data, clean, analyse,<br> 
 								visualise by exercising common features of R libraries: dplyr, readr, tidyverse, ggplot2, etc.</li><br>
 							<li> Customer Services skills, report and presentation </li><br>
+							<li> HTML,CSS </li><br>
 						</ul>		
 						 </p>
 					</section>
