--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 						<p>Young professional who hold two bachelors in Business Administration and Social Services </br>
 						I have a diverse background with more than 10 years of living, studying and working in Finland, France and United Kingdom</br>
 						Curious and quick-witted, I seek to broadening my knowledge and thrive within the field of Data Analysis</br>
-						This website is to showcase some of my recent works</br>
-						</br>
+						This website is to showcase some of my recent works.						
+						<h4>Highlighted skills:</h4> 
 						<ul>
-						<b>Highlighted skills:</b><br> 
 							<li> Excel advanced level, ease at using index-matching/lookup, pivot and automating processing data with PowerQuery/Excel VBA</li><br> 
 							<li> SMSS/BigQuery SQL to clean, explore, retrieve data to analyse and prepare them for visualisation </li><br>
 							<li> Visualisation tools notably Tableau and Power BI to connect data, create meaningful data stories, interactive dashboard </li><br>
