--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li> Excel advanced level, ease at using index-matching/lookup, pivot and automating processing data with PowerQuery/Excel VBA</li><br> 
 							<li> SMSS/BigQuery SQL to clean, explore, retrieve data to analyse and prepare them for visualisation </li><br>
 							<li> Visualisation tools notably Tableau and Power BI to connect data, create meaningful data stories, interactive dashboard </li><br>
-							<li> Other CRM tools and platforms such as Salesforce, Hubspot, Hootsuite, Mailjet, etc. I'm a very fast learner of new technologies</li><br>
+							<li> Other CRM tools and platforms such as Salesforce, Hubspot, Hootsuite, Mailjet, etc. I'm a very fast learner of new technologies</li>
 							<li> Good knowledge foundation of R and Python. I can use R to install data packages, load libraries, import/export data, clean, analyse,<br> 
 								visualise by exercising common features of R libraries: dplyr, readr, tidyverse, ggplot2, etc.</li><br>
 							<li> Customer Services skills, report and presentation </li><br>
