Update Full list of my projects.html

--- a/Full list of my projects.html
+++ b/Full list of my projects.html
@@ -36,7 +36,7 @@
 								<p>With the Sample data "Nasville Housing", data cleaning was performed with SQL, Tasks include:
 								Deleting duplicates, Filling in blank, Splitting to columns, etc.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!--<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -44,7 +44,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>-->
 						</div>
 							<ul class="actions">
 							<li><a href="index.html" class="button">Back Home</a></li>
