--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>My Resume</h2>
-						 <a href="#" class="CV"><img src="images/CV_Trang.001.jpeg" alt="" /></a>
+						 <a href="#" class="CV"><img src="images/CV_Trang.001 (1).jpeg" alt="" /></a>
 					</section>
 				<!-- Three -->
 					<section id="three">
