Update Full list of my projects.html

--- a/Full list of my projects.html
+++ b/Full list of my projects.html
@@ -36,12 +36,12 @@
 								<p>With the Sample data "Nasville Housing", data cleaning was performed with SQL, Tasks include:
 								Deleting duplicates, Filling in blank, Splitting to columns, etc.</p>
 							</article>
-							<!--<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="Project 3.html" class="image fit thumb"><img src="images/thumbs/Project 3.html" alt="" /></a>
+								<h3>Project 3: Ebay Company Profile Dashboard</h3>
+								<p>Building Tableau dashboard for ebay company profile from various online sources</p>
+							</article>
+							<!--<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>-->
