--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						<h4>Highlighted skills:</h4> 
 						<ul>
 							<li> Excel advanced level, ease at using index-matching/lookup, pivot and automating processing data with PowerQuery/Excel VBA</li><br> 
-							<li> SMSS/BigQuery SQL to clean, explore, retrieve data to analyse and prepare them for visualisation </li><br>
+							<li> SMSS/BigQuery/MySQL SQL to clean, explore, retrieve data to analyse and prepare them for visualisation </li><br>
 							<li> Visualisation tools notably Tableau and Power BI to connect data, create meaningful data stories, interactive dashboard </li><br>
-							<li> Other CRM tools and platforms such as Salesforce, Hootsuite, Mailjet, etc. I'm a very fast learner of new technologies</li>
+							<li> Other CRM tools and platforms such as Salesforce, Hootsuite, Mailjet, etc. I'm a very fast learner of new technologies</li><br>
 							<li> Good basic knowledge of R. I can use R to install data packages, load libraries, import/export data, clean, analyse,<br> 
 								visualise by exercising common features of R libraries: dplyr, readr, tidyverse, ggplot2, etc.</li><br>
 							<li> Customer Services skills, report and presentation </li><br>
@@ -65,12 +65,12 @@
 								<p>With the Sample data "Nasville Housing", data cleaning was performed with SQL, Tasks include:
 								Deleting duplicates, Filling in blank, Splitting to columns, etc.</p>
 							</article>
-							<!--<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="Project 3.html" class="image fit thumb"><img src="images/thumbs/Project 3.png" alt="" /></a>
+								<h3>Project 3: Ebay company profile Dashboard</h3>
+								<p>Building Tableau dashboard of ebay company profile from various online sources</p>
+							</article>
+							<!--<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
