--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li> SMSS/BigQuery/MySQL SQL to clean, explore, retrieve data to analyse and prepare them for visualisation </li><br>
 							<li> Visualisation tools notably Tableau and Power BI to connect data, create meaningful data stories, interactive dashboard </li><br>
 							<li> Other CRM tools and platforms such as Salesforce, Hootsuite, Mailjet, etc. I'm a very fast learner of new technologies</li><br>
-							<li> Good basic knowledge of R. I can use R to install data packages, load libraries, import/export data, clean, analyse,<br> 
+							<li> Good basic knowledge of R. I can use R to install data packages, load libraries, import/export data, clean, analyse,  
 								visualise by exercising common features of R libraries: dplyr, readr, tidyverse, ggplot2, etc.</li><br>
 							<li> Customer Services skills, report and presentation </li><br>
 							<li> HTML,CSS </li><br>
