Update Full list of my projects.html

--- a/Full list of my projects.html
+++ b/Full list of my projects.html
@@ -37,7 +37,7 @@
 								Deleting duplicates, Filling in blank, Splitting to columns, etc.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="Project 3.html" class="image fit thumb"><img src="images/thumbs/Project 3.html" alt="" /></a>
+								<a href="Project 3.html" class="image fit thumb"><img src="images/thumbs/Project 3.jpg" alt="" /></a>
 								<h3>Project 3: Ebay Company Profile Dashboard</h3>
 								<p>Building Tableau dashboard for ebay company profile from various online sources</p>
 							</article>
