--- a/Project 3.html
+++ b/Project 3.html
@@ -26,7 +26,7 @@
 
 				<h2>Project 3: Ebay company profile Dashboard</h2>
 						<div>
-								<img src="images/thumbs/Project 3.jpg" width="797" height="328" alt="" /> </br></br>
+								<img src="images/Project 3.jpg" width="797" height="328" alt="" /> </br></br>
 								<p>
 								<b>Dashboard</b> <a href="https://public.tableau.com/views/Tableaufinaldashboard/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link"> My Tableau Public</a></br>
 								<b>Skills:</b> data prep, data aggregation, data visualisation, data storytelling Tableau</br>
