--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Trang</strong><br />
-					London-based data analyst<br />
+					London-based Salesforce Administrator/ Business Systems Administrator<br />
 					Welcome to my page</h1>
 				</div>
 			</header>
@@ -27,9 +27,7 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>Young professional who hold two bachelors in Business Administration and Social Services </br>
-						I have a diverse background with more than 10 years of living, studying and working in Finland, France and United Kingdom</br>
-						Curious and quick-witted, I seek to broadening my knowledge and thrive within the field of Data Analysis</br>
+						<p>Young professional with experience working across Salesforce Cloud and its intergrated ERP </br>
 						This website is to showcase some of my recent works.						
 						<h4>Highlighted skills:</h4> 
 						<ul>
