--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 						</header>
 						<p>As a dedicated Systems Administrator, I focus on optimizing Salesforce environments to streamline business processes and enhance user experience. With a thorough understanding of Salesforce configurations, automation, and data management, I work closely with stakeholders to design, implement, and maintain tailored solutions that drive productivity and ensure alignment with business goals. My expertise includes user training, troubleshooting, and continuous system improvements to maximize platform efficiency and user satisfaction.
 						
-						<h4>Trailhead Double Stars Ranger https://trailblazer.me/id/trangdao</h4> 
+						<h4>Trailhead Double Stars Ranger https://trailblazer.me/id/trangdao </br>
+						Certified Salesforce Administrator</br>
+						Certified Salesforce Platform App Builder</br>
+						Certified AI Specialist</h4> 
 							
 						 </p>
 					</section>
