--- a/Project 4.html
+++ b/Project 4.html
@@ -28,24 +28,24 @@
 						<div>
 								<img src="" width="797" height="328" alt="" /> </br></br>
 								<p>
-								<b>This hands-on discovery project showcases a Private Equity (PE) Portfolio Performance Dashboard, built in Power BI. It visualises financial and investment KPIs for a portfolio of 50 companies, designed to reflect real-world reporting needs in the private equity sector.</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> Project_1_Covid_data.sql </a></br>
+								<b>This hands-on discovery project showcases a Private Equity (PE) Portfolio Performance Dashboard, built in Power BI. It visualises financial and investment KPIs for a portfolio of 50 companies, designed to reflect real-world reporting needs in the private equity sector.</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> </a></br>
 								<b>🔗 View Project file </b> <a href="https://drive.google.com/file/d/1Rq71tKhkm3El-Zf3IjfPjEcl-3HGd71J/view?usp=sharing"> here </a></br>
 								<b>🛠 Tools: </b> Power BI Desktop, DAX, data modeling</br>
-								<b>Description:</b> I independently:
+								<b>Description:</b> I independently:</br>
 
-Modelled investment and financial data across multiple related tables.
+Modelled investment and financial data across multiple related tables.</br>
 
-Created DAX measures to calculate key metrics such as IRR, MOIC, EBITDA Margin, and Revenue Growth.
+Created DAX measures to calculate key metrics such as IRR, MOIC, EBITDA Margin, and Revenue Growth.</br>
 
-Built a clean, neutral-themed dashboard featuring:
+Built a clean, neutral-themed dashboard featuring:</br>
 
-Performance trends over time
+Performance trends over time</br>
 
-Sector distribution with slicers
+Sector distribution with slicers</br>
 
-Company-level financial insights and KPIs
+Company-level financial insights and KPIs</br>
 
-Applied best practices in Power BI, including data modelling, cross-filtering, slicers, KPI cards, conditional formatting, and interactive visuals.
+Applied best practices in Power BI, including data modelling, cross-filtering, slicers, KPI cards, conditional formatting, and interactive visuals.</br>
 
 This project demonstrates my ability to build insightful dashboards from scratch, apply financial logic, and align visuals with the analytical priorities of finance and investment teams. </br> 
 
