Update Full list of my projects.html

--- a/Full list of my projects.html
+++ b/Full list of my projects.html
@@ -14,7 +14,7 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Trang</strong><br />
-					London-based data analyst<br />
+					London-based Salesforce/Business Systems Administrator<br />
 					Welcome to my page</h1>
 				</div>
 			</header>
