--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<p>Building Tableau dashboard of ebay company profile from various online sources</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="Project 4.html" class="image fit thumb"><img src="images/thumbs/sql thumb.jpg" alt="" /></a>
+								<a href="Project 4.html" class="image fit thumb"><img src="images/thumbs/project 4.PNG" alt="" /></a>
 								<h3>Project 4: Portfolio Company Performance Dashboard for a Private Equity Firm</h3>
 								<p>This hands-on discovery project showcases a Private Equity (PE) Portfolio Performance Dashboard, built in Power BI. It presents key financial metrics and investment KPIs for a portfolio of 50 companies (mock data), designed to reflect the real-world reporting needs of a PE firm. </p>
 							</article>
