--- a/Project 4.html
+++ b/Project 4.html
@@ -26,7 +26,7 @@
 					<section id="one">
 						<h2>Project 4: Portfolio Company Performance Dashboard (Power BI)</h2>
 						<div>
-								<img src="" width="797" height="328" alt="" /> </br></br>
+								<img src="images/thumbs/project 4.PNG" width="797" height="328" alt="" /> </br></br>
 								<p>
 								<b>This hands-on discovery project showcases a Private Equity (PE) Portfolio Performance Dashboard, built in Power BI. It visualises financial and investment KPIs for a portfolio of 50 companies, designed to reflect real-world reporting needs in the private equity sector.</b> <a href="https://github.com/trangpkamk/Portfolioprojects"> </a></br>
 								<b>🔗 View Project file </b> <a href="https://drive.google.com/file/d/1Rq71tKhkm3El-Zf3IjfPjEcl-3HGd71J/view?usp=sharing"> here </a></br>
